    options instead of all config options. (Wengier)
  - The CONFIG command and Configuration Tool will now
    save common and modified config options by default.
    The -all command-line option (or "Save all options
    to the configuration file" checkbox) will force to
    save all config options. A new -mod command-line
    option is added to CONFIG command to save modified
    config options only. (Wengier)
  - Updated the Windows installer to default to the
    "typical" installation. For the full installation
    start menu items will be added for DOSBox-X builds
    copied to subdirectories. A new checkbox "Write
    common config options (instead of all) to the
    configuration file" is added which when checked
    will only write common and modified advanced config
    options to the config file. Furthermore, for both
    "typical" and "full" installations the Windows
    installer will now also copies the DLL files
    inpout32.dll (32-bit) and inpoutx64.dll (64-bit) to
    the DOSBox-X install directory for use with the
    direct parallel port passthrough feature. (Wengier)
  - Improved Flatpak support for Linux. (rderooy)
  - Improved message for the -help command-line option,
    adding for example the -socket option. (Wengier)
  - Fixed issue that aspect ratio not being respected
    in full-screen mode when a GLSL shader is enabled
    with an OpenGL output. (Wengier)
  - Fixed command-line option -socket not working for
    the null-modem feature. (Wengier)
  - Fixed shelling from programs may not work when the
    shell config option is set. (Wengier)
  - Improved Gravis Ultrasound (GUS) implementation to
    make it more accurately represent the GUS DMA state
    as expected by the running DOS software.
  - The archive attribute will no longer automatically
    be applied to directories on non-Windows systems.
    This fixed issue with PLAYMIDI.EXE from Gravis
    Ultrasound when listing directories. (Wengier)